# Chess

./: .gitignore  CMakeLists.txt  chessboard.cpp  chessboard.h  main.cpp  notes.txt  planning.txt
src/: Makefile  bishop.cpp  bishop.h  chess_game  chessboard.cpp  chessboard.h  game.cpp  game.h  games.txt  king.cpp  king.h  knight.cpp  knight.h  main.cpp  move.cpp  move.h  pawn.cpp  pawn.h  piece.h  queen.cpp  queen.h  rook.cpp  rook.h
src/engines/: engine.cpp  engine.h  randomEngine.cpp  randomEngine.h
src/pieces/: Bishop.cpp  Bishop.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
src/python_chess/: validation_games.py
tests/: test_FullGames.cpp  test_bishop.cpp  test_game.cpp  test_games.cpp  test_king.cpp  test_knight.cpp  test_main.cpp  test_pawn.cpp  test_queen.cpp  test_rook.cpp
